[gd_scene load_steps=10 format=2]

[ext_resource path="res://gate/cancello.png" type="Texture" id=1]
[ext_resource path="res://gate/GateFront.gd" type="Script" id=2]
[ext_resource path="res://crypt/Gate_Open_00.wav" type="AudioStream" id=3]

[sub_resource type="Animation" id=1]
resource_name = "open_down"
length = 0.8
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 1, 0 ), Vector2( 1, 1 ), Vector2( 1, 2 ), Vector2( 1, 3 ) ]
}

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 16, 10 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 16, 10 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 32, 10 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 32, 24 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 32, 16 )

[node name="GateFront" type="StaticBody2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 64, 0 )
texture = ExtResource( 1 )
vframes = 4
hframes = 2
frame = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite"]
anims/open = SubResource( 1 )

[node name="WallLeft" type="CollisionShape2D" parent="."]
position = Vector2( 16, -8 )
shape = SubResource( 2 )

[node name="WallRight" type="CollisionShape2D" parent="."]
position = Vector2( 112, -8 )
shape = SubResource( 3 )

[node name="Gate" type="CollisionShape2D" parent="."]
position = Vector2( 64, -8 )
shape = SubResource( 4 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 1024

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 64, 24 )
shape = SubResource( 5 )

[node name="GateOpen" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="Exit" type="Area2D" parent="."]
monitoring = false
collision_layer = 0
collision_mask = 1024

[node name="CollisionShape2D" type="CollisionShape2D" parent="Exit"]
position = Vector2( 64, -32 )
shape = SubResource( 6 )
[connection signal="animation_finished" from="Sprite/AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="area_shape_entered" from="Area2D" to="." method="_on_Area2D_area_shape_entered"]
[connection signal="area_shape_entered" from="Exit" to="." method="_on_Exit_area_shape_entered"]
